test/mutation_analysis/s0551_student_attendance_record_i/hafis/ablation_o3_full/mutants/21/result.txt
./test/mutation_analysis/s0551_student_attendance_record_i/hafis/ablation_o3_full/mutants/21/Solution.java:22: error: unreachable statement
                while (false) {
                              ^
1 error
